--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <p class="a">Hello! I´m José Mauricio <br> Sotela Prendergast</p>
             <p class="b">Web Development Student <br> at DCI Institute</p>
-            <p class="c">I am fully thankful with the JobCenter <br> and DCI Institutr for giving me the <br>
+            <p class="c">I am fully thankful with the JobCenter <br> and DCI Institute for giving me the <br>
                 opportunity to be part of the persons <br> taking the Web Development course.</p>
          
         </div>
